--- a/styles/media_styles.css
+++ b/styles/media_styles.css
@@ -129,6 +129,13 @@ h5 {
     margin-top: 100px;
 }
 
+.slider h1 {
+    font-size: 60px;
+    text-align: center;
+    color: rgb(250, 63, 94);
+    margin-bottom: 20px;
+}
+
 .slides {
     width: 500%;
     height: 500px;
@@ -304,4 +311,126 @@ justify-content: center;
     text-shadow: 1px 2px 3px black, 0 0 1em rgb(238, 44, 92);
     color: rgb(231, 5, 81);
     padding-bottom: 80px;
+}
+
+/* Footer */
+
+footer {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 50px;
+    color: #fff;
+    background-color: rgb(7, 7, 46);
+}
+
+.footer > *{
+flex: 1 100%;
+
+}
+
+.footer-left {
+    margin-right: 1.25em;
+    margin-bottom: 2em;
+
+}
+
+.footer-left img {
+    width: 80px;
+    height: 80px;
+}
+
+.footer-h2 {
+    font-weight: 600;
+    font-size: 17px;
+}
+
+.footer ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.footer li {
+    line-height: 2em;
+}
+
+.footer a {
+    text-decoration: none;
+
+}
+
+.footer-right {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.footer-right > *{
+    flex: 1 50%;
+    margin-right: 1.25em;
+
+}
+
+.box a {
+    color: #999;
+
+}
+
+.footer-bottom {
+    text-align: center;
+    color: #999;
+    padding-top: 50px;
+
+}
+
+.footer-left p {
+    padding-right: 20%;
+    color: #999;
+
+}
+
+.social a{
+    background:  rgb(118, 131, 242);
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    margin-right: 10px;
+
+}
+
+.social a :hover {
+    background: rgb(246, 80, 205);
+    transition: .3s;
+}
+
+.social a ion-icon{
+    color: white;
+    padding: 10px 12px;
+    font-size: 20px;
+    
+}
+
+@media screen and (min-width: 600px) {
+    .footer-right > *{
+        flex: 1;
+    }
+    .footer-left{
+        flex: 1 0px;
+
+    }
+    .footer-right{
+        flex: 2 0px;   
+    }
+}
+
+.box li :hover {
+    color: violet;
+    transition: .6s;
+    margin-left: 10px;
 }
