--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,6 +279,74 @@ color: rgb(236, 230, 230);
     margin-left: 135px;
 }
 
+.sec-inf {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background-color: rgb(20, 20, 20);
+}
+
+img {
+    width: 100%;
+}
+
+.inf-post {
+    width: 80%;
+    max-width: 90rem;
+    padding: 4rem;
+    background-color:rgb(20, 20, 20);
+    box-shadow: 0 1,4rem 8rem rgb(82, 82, 82);
+    display: flex;
+    align-items: center;
+    border-radius: .9rem;
+}
+
+.inf-img {
+    transform: translateX(-6rem);
+    position: relative;
+    min-width: 30rem;
+    max-width: 30rem;
+    height: 25rem;
+}
+
+.inf-img img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.inf-title {
+    margin: 1.5rem 0 1rem;
+    text-transform: uppercase;
+    font-size: 2rem;
+    color: rgb(231, 5, 81);
+    text-shadow: #D62229;
+}
+
+.inf-post-btn {
+    display: inline-block;
+    padding: 1.3rem 3rem ;
+    text-transform: uppercase;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(231, 5, 81);
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+.inf-post-btn:hover {
+    background-color: rgb(255, 72, 133);
+    transition: .3s;
+}
+
+
 
 /*Footer*/
 
