Edited their path

--- a/styles/checkout_styles.css
+++ b/styles/checkout_styles.css
@@ -93,11 +93,11 @@ color: rgb(231, 5, 81);
 }
 
 .crd1 {
-    background-image: url(../img/pic-1.jpg);
+    background-image: url(img/pic-1.jpg);
 }
 
 .crd2 {
-    background-image: url(../img/pic-2.png);
+    background-image: url(img/pic-2.png);
 }
 
 h5 {
